--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <link rel="icon"type="image/png"href="images/icons8-bread-loaf-50.png">
+        <link rel="icon"type="image/png"href="https://github.com/meme-ron/PALMcopy/blob/mainimages/icons8-bread-loaf-50.png?raw=true">
 
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="js/jquery-3.7.1.slim.min.js"></script>
@@ -21,7 +21,7 @@
     <body>
         <div id="menu"class="big-bg">
             <header class="page-header wrapper">
-                <h1><a href="index.html"><img class="logo" src="images/logo-vector3.png" alt="PALMホーム"></a></h1>
+                <h1><a href="index.html"><img class="logo" src="https://github.com/meme-ron/PALMcopy/blob/main/images/logo-vector3.png?raw=true" alt="PALMホーム"></a></h1>
                 <nav>
                     <ul class="main-nav">
                      <li><a href="news.html">News</a></li>
@@ -42,39 +42,39 @@
         </div>
         <div class="wrapper grid">
             <div class="item">
-                <img src="images/sand1.png" alt="たまごサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand1.png?raw=true" alt="たまごサンド　　¥350(税込)">
                 <div><p>たまごサンド　　¥350(税込)</p></div>
             </div>
             <div class="item">
-                <img src="images/sand2.jpg" alt="自家製ベーコンマヨサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand2.jpg?raw=true" alt="自家製ベーコンマヨサンド　　¥350(税込)">
                 <div><p>自家製ベーコンマヨサンド　　¥350(税込)</p></div>
             </div>
             <div class="item">
-                <img src="images/sand3.jpg" alt="ベジサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand3.jpg?raw=true" alt="ベジサンド　　¥350(税込)">
                 <div><p>ベジサンド　　¥350(税込)</p></div>
             </div>
             <div class="item">
-                <img src="images/sand4.png" alt="クロワッサンサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand4.png?raw=true" alt="クロワッサンサンド　　¥350(税込)">
                 <p>クロワッサンサンド　　¥350(税込)</p>
             </div>
             <div class="item">
-                <img src="images/sand5.png" alt="BBQサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand5.png?raw=true" alt="BBQサンド　　¥350(税込)">
                 <p>BBQサンド　　¥350(税込)</p>
             </div>
             <div class="item">
-                <img src="images/sand6.png" alt="コーンとたまごのサラダサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand6.png?raw=true" alt="コーンとたまごのサラダサンド　　¥350(税込)">
                 <p>コーンとたまごのサラダサンド　　¥350(税込)</p>
             </div>
             <div class="item">
-                <img src="images/sand7.jpg" alt="モーニングサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand7.jpg?raw=true" alt="モーニングサンド　　¥350(税込)">
                 <p>モーニングサンド　　¥350(税込)</p>
             </div>
             <div class="item">
-                <img src="images/sand8.png" alt="ペパロニチーズサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand8.png?raw=true" alt="ペパロニチーズサンド　　¥350(税込)">
                 <p>ペパロニチーズサンド　　¥350(税込)</p>
             </div>
             <div class="item">
-                <img src="images/sand9.png" alt="フルーツ＆クリチのオープンサンド　　¥350(税込)">
+                <img src="https://github.com/meme-ron/PALMcopy/blob/main/images/sand9.png?raw=true" alt="フルーツ＆クリチのオープンサンド　　¥350(税込)">
                 <p>フルーツ＆クリチのオープンサンド　　¥350(税込)</p>
             </div>
         </div><!-- /.grid -->
