--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <link rel="icon"type="image/png"href="images/icons8-bread-loaf-50.png">
+        <link rel="icon"type="image/png"href="https://github.com/meme-ron/PALMcopy/blob/mainimages/icons8-bread-loaf-50.png?raw=true">
 
         <meta name="viewport" content="width=device-width,initial-scale=1">
     </head> 
@@ -19,7 +19,7 @@
     <body>
         <div id="contact"class="big-bg">
             <header class="page-header wrapper">
-                <h1><a href="index.html"><img class="logo" src="images/logo-vector3.png" alt="PALMホーム"></a></h1>
+                <h1><a href="index.html"><img class="logo" src="https://github.com/meme-ron/PALMcopy/blob/main/images/logo-vector3.png?raw=true" alt="PALMホーム"></a></h1>
                 <nav>
                     <ul class="main-nav">
                      <li><a href="news.html">News</a></li>
