--- a/menu.html
+++ b/menu.html
@@ -14,8 +14,8 @@
         <link rel="icon"type="image/png"href="https://github.com/meme-ron/PALMcopy/blob/mainimages/icons8-bread-loaf-50.png?raw=true">
 
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <script src="js/jquery-3.7.1.slim.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="https://github.com/meme-ron/PALMcopy/blob/main/js/jquery-3.7.1.slim.min.js"></script>
+        <script src="https://github.com/meme-ron/PALMcopy/blob/main/js/script.js"></script>
     </head> 
 
     <body>
